[gd_scene load_steps=12 format=3 uid="uid://bl6kx2v8meotl"]

[ext_resource type="PackedScene" uid="uid://dgpomiyh8m3pu" path="res://class/building.tscn" id="2_7bi7w"]
[ext_resource type="PackedScene" uid="uid://cqiad0it050ig" path="res://building/lab/lab.tscn" id="2_402yj"]
[ext_resource type="Script" path="res://script/mouse_controller.gd" id="2_bju7i"]
[ext_resource type="Script" path="res://script/game_controller.gd" id="3_ex5qy"]
[ext_resource type="Script" path="res://script/placing_controller.gd" id="3_vx3tn"]
[ext_resource type="PackedScene" uid="uid://pccr0bcja5s0" path="res://scene/camera.tscn" id="5_5dh7y"]
[ext_resource type="PackedScene" uid="uid://osbqr5m0upwv" path="res://scene/platform.tscn" id="6_1w6rt"]
[ext_resource type="PackedScene" uid="uid://bngy16rweaggf" path="res://scene/gridline.tscn" id="7_0tg6w"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_qrnaa"]

[sub_resource type="Sky" id="Sky_vey25"]
sky_material = SubResource("ProceduralSkyMaterial_qrnaa")

[sub_resource type="Environment" id="Environment_0836c"]
background_mode = 2
sky = SubResource("Sky_vey25")

[node name="game" type="Node3D"]

[node name="MouseController" type="Node" parent="."]
script = ExtResource("2_bju7i")

[node name="GameController" type="Node" parent="."]
script = ExtResource("3_ex5qy")

[node name="PlacingController" type="Node" parent="." node_paths=PackedStringArray("building_container")]
script = ExtResource("3_vx3tn")
building_container = NodePath("../Buildings")

[node name="Buildings" type="Node" parent="."]

[node name="Lab" parent="Buildings" instance=ExtResource("2_402yj")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -2, 0, -1)

[node name="Building" parent="Buildings" instance=ExtResource("2_7bi7w")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -5, 0, -1)

[node name="Camera" parent="." instance=ExtResource("5_5dh7y")]
unique_name_in_owner = true
transform = Transform3D(0.707107, 0.206738, -0.67621, 0, 0.956305, 0.292372, 0.707107, -0.206738, 0.67621, -9.645, 8.575, 8.482)

[node name="Environment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_0836c")

[node name="Sun" type="DirectionalLight3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 0.672354, 0.74023, 0, -0.74023, 0.672354, 0, 8.77538, 0)

[node name="Platform" parent="." instance=ExtResource("6_1w6rt")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)

[node name="Gridline" parent="." instance=ExtResource("7_0tg6w")]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0)
visible = false

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="ModeButton" type="Button" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "normal"

[node name="PropPanel" type="Panel" parent="Control"]
unique_name_in_owner = true
layout_mode = 0
offset_left = 812.0
offset_top = 42.0
offset_right = 1112.0
offset_bottom = 542.0

[node name="VBoxContainer" type="VBoxContainer" parent="Control/PropPanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PropName" type="Label" parent="Control/PropPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "name"

[node name="PropInfo" type="Label" parent="Control/PropPanel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "info1"

[connection signal="pressed" from="Control/ModeButton" to="GameController" method="_on_modebutton_pressed"]
